Register database in the app

--- a/FinancialTracker.API/FinancialTracker.WebServices/appsettings.Development.json
+++ b/FinancialTracker.API/FinancialTracker.WebServices/appsettings.Development.json
@@ -1,8 +1,5 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+  "DatabaseConfiguration": {
+    "ConnectionString": "Data Source=.;Initial Catalog=FinancialTracker;Integrated Security=True;TrustServerCertificate=True"
   }
 }
