Implement Identity controller with register and login endpoints

--- a/FinancialTracker.API/FinancialTracker.WebServices/FinancialTracker.WebServices.csproj
+++ b/FinancialTracker.API/FinancialTracker.WebServices/FinancialTracker.WebServices.csproj
@@ -8,6 +8,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.10" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
+	<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.13" />
 	<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.13">
 	   <PrivateAssets>all</PrivateAssets>
 	  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -15,7 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\FinancialTracker.Data\FinancialTracker.Data.csproj" />
+    <ProjectReference Include="..\FinancialTracker.Application\FinancialTracker.Application.csproj" />
   </ItemGroup>
 
 </Project>
