--- a/FinancialTracker.API/FinancialTracker.WebServices/appsettings.Development.json
+++ b/FinancialTracker.API/FinancialTracker.WebServices/appsettings.Development.json
@@ -1,5 +1,8 @@
 {
   "DatabaseConfiguration": {
     "ConnectionString": "Data Source=.;Initial Catalog=FinancialTracker;Integrated Security=True;TrustServerCertificate=True"
+  },
+  "JwtConfiguration": {
+    "Secret": "jEt0BkCIR1nS3ENULnHmaCzBwUB7Sq"
   }
 }
